Correct spacing under assigned when it's the last week

--- a/screen.css
+++ b/screen.css
@@ -276,6 +276,10 @@ nav {
   padding-bottom: 0;
 }
 
+#current-week:last-child {
+  padding-bottom: 0.6315789474em;
+}
+
 #calendar .preview {
   margin-bottom: 0;
 }
